# ai-canvas

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  start-backend.sh  start-dev-desktop.sh  start-dev.sh  start-web.sh  tsconfig.app.json  vite.config.ts
.github/workflows/: desktop-windows.yml
backend/: __init__.py  config.py  image_utils.py  log_sanitize.py  logging_setup.py  main.py  oss_uploader.py  providers.py  schemas.py
backend/api/: router.py
backend/app/: __init__.py  main.py
backend/services/: __init__.py  generation.py  upload.py
backend/tests/: test_smoke.py
doc/: PROJECT_ARCHITECTURE.md  README.md  优化方案.md  文档体系设计.md  阶段性修改计划.md  项目理解报告.md
doc/templates/: ADR.template.md  CHANGELOG.template.md  guide.template.md
docs/: AI_CONTEXT.md  DOC_MAP.md  MAINTENANCE_GUIDE.md  README.md  ROADMAP.md  代码架构说明.md  工程架构与源码索引.md  新生学习思路.md
docs/guides/: add-new-ai-provider.md  add-new-element-type.md  add-new-workflow-node.md  canvas-performance.md  debug-canvas-coordinates.md  desktop-and-web-startup.md  element-command-system.md  getting-started.md  testing.md
docs/新生课程介绍/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  README.md
electron/: main.cjs  preload.cjs
src/: App.tsx  main.tsx  vite-env.d.ts
src/_archive/: README.md
src/app/: App.tsx  AppShell.tsx  CanvasArea.tsx  EditorModals.tsx  LeftSidebar.tsx  RightSidebar.tsx  TopBar.tsx
src/canvas/: types.ts
src/components/: AiChatPanel.tsx  MiniMap.tsx  (+7 more)
(+270 files in other folders)
