[project]
name = "ai-canvas-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "alibabacloud-oss-v2",
    "dashscope",
    "fastapi",
    "httpx",
    "pillow",
    "pydantic-settings>=2.0",
    "python-dotenv",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
